# shieldpipe

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
js/: README.md  package-lock.json  package.json  tsconfig.json
js/src/: detector.ts  index.ts
python/: README.md  pyproject.toml
python/shieldpipe/: __init__.py  cli.py  detector.py
python/tests/: test_detector.py
