[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shieldpipe"
version = "0.1.0"
description = "Privacy middleware for LLM & AI pipelines — PII detection, pseudonymization, and rehydration"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["pii", "privacy", "llm", "ai", "pseudonymization"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "cryptography>=3.0.0",
]

[project.urls]
"Homepage" = "https://github.com/tarundevx/shieldpipe"

[project.scripts]
shieldpipe = "shieldpipe.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["shieldpipe*"]
